--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -9,6 +9,7 @@ $dark-green: #0C8346;
 $darkest-green: #0D635C;
 $sea-green: #1CC9B5;
 $dark-sea-green:#138E80;
+$gold: #e4cfa8;
 
 $open-sans: 'Open Sans', sans-serif;
 $playfair-serif: 'Playfair Display', serif;
