added product categories (frontend-backend)

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,15 @@
     <script type="text/javascript">
       window.emptyCartURL = "<%= image_url('empty-cart.svg') %>"
       window.backgroundImgURL = "<%= image_url('background.jpg') %>"
+      window.giftBannerURL = "<%= image_url('banners/gifts_banner.jpg') %>"
+      window.funBannerURL = "<%= image_url('banners/fun_banner.jpg') %>"
+      window.homeBannerURL = "<%= image_url('banners/home_banner.jpg') %>"
+      window.kitchenBannerURL = "<%= image_url('banners/kitchen_banner.jpg') %>"
+      window.artBannerURL = "<%= image_url('banners/art_banner.jpg') %>"
+      window.jewelryBannerURL = "<%= image_url('banners/jewelry_banner.jpg') %>"
+      window.womenBannerURL = "<%= image_url('banners/women_banner.jpg') %>"
+      window.menBannerURL = "<%= image_url('banners/men_banner.jpg') %>"
+      window.kidsBannerURL = "<%= image_url('banners/kids_banner.jpg') %>"
     </script>
     
     <%= yield %>
