--- a/app/assets/stylesheets/category_link.scss
+++ b/app/assets/stylesheets/category_link.scss
@@ -1,12 +1,14 @@
 @import "variables";
 
 .for-her-link{
-  a {
+  div {
     label {
       color: $black;
       font-size: 24px;
     }
-
+    margin: auto;
+  }
+  a {
     button {
       width: 100%;
       height: 40px;
@@ -19,14 +21,10 @@
       padding-right: 15px;
       padding-top: 5px;
       padding-bottom: 5px;
-    }
-
-    label:hover {
       cursor: pointer;
     }
 
     button:hover {
-      cursor: pointer;
       color: $black;
       background-color: $sea-green;
       transition-duration: 0.2s;
