patched to display only 2 products per row on small screen width

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -185,7 +185,6 @@
         align-items: center;
         justify-content: center;
         width: 100%;
-        // border-bottom: 1px solid $beige; 
       }
 
       div {
@@ -228,10 +227,10 @@
     margin: 10px;
   }
 
-  .products-index-item {
-    width: 100%;
-    background: white;
-    padding-left: 10px;
-    padding-right: 10px;
-  }
+  // .products-index-item {
+  //   width: 100%;
+  //   background: white;
+  //   padding-left: 10px;
+  //   padding-right: 10px;
+  // }
 }
