--- a/app/assets/stylesheets/category_products.scss
+++ b/app/assets/stylesheets/category_products.scss
@@ -17,17 +17,23 @@
         top: 132px;
       }
       img{
-
         height: 300px;
         margin-top: 10px;
         margin-bottom: 20px;
-
       }
       position: relative;
       display: flex;
       justify-content: center;
       overflow: hidden;
       padding: 10px;
+    }
+    h2 {
+      font-family: $playfair-serif;
+      font-size: 32px;
+      display: flex;
+      justify-content: center;
+      text-align: center;
+      padding-bottom: 10px;
     }
     padding: 0 10px;
   }
@@ -43,4 +49,23 @@
     }
   }
   
+}
+
+@media all and (max-width: 640px) {
+  .category {
+    .category-header {
+      div {
+        h1 {
+          top: 89px;
+        }
+
+        img {
+          max-height: 200px;
+        }
+
+        padding-bottom: 0;
+      }
+      border-top: 2px solid $beige;
+    }
+  }
 }
