implemented image preview in show page

--- a/app/assets/stylesheets/cart.scss
+++ b/app/assets/stylesheets/cart.scss
@@ -114,7 +114,7 @@
           a:hover {
             text-decoration: underline;
             text-decoration-color: $sea-green;
-            transition: 0.2s;
+            transition-duration: 0.2s;
           }
           display: flex;
           flex-direction: column;
