--- a/app/assets/stylesheets/product_show.scss
+++ b/app/assets/stylesheets/product_show.scss
@@ -13,6 +13,14 @@
   padding-top: 10px;
 }
 
+.visible {
+  opacity: 1;
+}
+
+.blurred {
+  opacity: 0.5;
+}
+
 .show-images {
   img {
     padding-bottom: 10px;
@@ -22,9 +30,12 @@
   ul {
     li {
       img {
-        width: 50px;
-        height: 50px;
+        width: 80px;
+        height: 80px;
         padding: 0;
+        cursor: pointer;
+        -webkit-transition: opacity 600ms, visibility 600ms;
+        transition: opacity 600ms, visibility 600ms;
       }
       padding-bottom: 40px;
       padding-right: 10px;
@@ -40,7 +51,7 @@
   h1 {
     margin-top: 10px;
     font-family: $playfair-serif;
-    font-size: 24px;
+    font-size: 28px;
     padding: 20px 10px;
     display: flex;
     justify-content: center;
@@ -49,7 +60,7 @@
 
   .show-product-description {
     font-family: $playfair-serif;
-    font-size: 14px;
+    font-size: 16px;
     font-style: italic;
     padding: 10px;
     display: flex;
@@ -70,7 +81,7 @@
   div {
     select {
       width: calc(100% * 1/3 - 5px);
-      height: 30px;
+      height: 44px;
       padding-left: 5px;
       padding-bottom: 5px;
       padding-top: 5px;
@@ -90,15 +101,17 @@
         5px 5px,
         2.5em 2.5em;
       background-repeat: no-repeat;
+      font-family: $open-sans;
+      font-size: 16px;
     }
 
     button {
       width: calc(100% * 2/3 - 5px);
-      height: 30px;
+      height: 44px;
       padding: 5px;
       border-radius: 2px;
       font-family: $playfair-serif;
-      font-size: 14px;
+      font-size: 17px;
       color: white;
       background-color: $darkest-green;
     }
@@ -150,8 +163,8 @@
     li{
       a{
         i{
-          height: calc(0.8 * 24px);
-          width: calc(0.8 * 58px);
+          height: calc(1 * 24px);
+          width: calc(1 * 58px);
           margin: 2px;
         }
         display: flex;
@@ -186,8 +199,8 @@
   background-repeat: no-repeat;
   vertical-align: top;
   overflow: hidden;
-  height: calc(0.7 * 24px);
-  width: calc(0.7 * 58px);
+  height: calc(1 * 24px);
+  width: calc(1 * 58px);
   margin: 5px;
 }
 
@@ -198,8 +211,8 @@
   background-repeat: no-repeat;
   vertical-align: top;
   overflow: hidden;
-  height: calc(0.7 * 24px);
-  width: calc(0.7 * 58px);
+  height: calc(1 * 24px);
+  width: calc(1 * 58px);
   margin: 5px;
 }
 
@@ -210,8 +223,8 @@
   background-repeat: no-repeat;
   vertical-align: top;
   overflow: hidden;
-  height: calc(0.7 * 24px);
-  width: calc(0.7 * 58px);
+  height: calc(1 * 24px);
+  width: calc(1 * 58px);
   margin: 5px;
 }
 
