--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:500" rel="stylesheet">
     <%= javascript_include_tag 'application' %>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,  minimum-scale=1.0"> 
 
   </head>
 
