--- a/app/assets/stylesheets/product_show.scss
+++ b/app/assets/stylesheets/product_show.scss
@@ -351,9 +351,6 @@
           }
 
           div {
-            i {
-
-            }
             p{
               padding-left: 10px;
               padding-right: 10px;
@@ -364,7 +361,6 @@
         }
         background-color: white;
         margin-top: 10px;
-        // padding-top: 10px;
       }
       width: calc(100% * 2 / 3);
     }
@@ -613,6 +609,31 @@
 }
 
 @media all and (max-width: 640px) {
+  .the-story,
+  .the-maker,
+  .product-details-shipping {
+    h1 {
+      button {
+        // width: 24x;
+        // height: 24px;
+        // font-size: 24px;
+        // font-family: $open-sans;
+        // color: $dark-green;
+        // border: none;
+        // transform: scaleX(1.7);
+        // cursor: pointer;
+        // box-sizing: border-box;
+        padding: 0;
+        margin: 0;
+      }
+    }
+  }
+
+
+
+
+
+
   .product-details-shipping-outer {
     .product-details-shipping {
       width: 100%;
