--- a/app/assets/stylesheets/modal.scss
+++ b/app/assets/stylesheets/modal.scss
@@ -80,6 +80,8 @@
     width: 38px;
     height: 38px;
     border: none;
+    padding: 0;
+    margin: 0;
   }
   button:before {
     content: "\00D7" ;
