modified close button padding centered on mobile

--- a/app/assets/stylesheets/category_nav.scss
+++ b/app/assets/stylesheets/category_nav.scss
@@ -82,6 +82,32 @@
     padding-right: 0px;
   }
 
+  /////////
+// .modal-close-btn {
+//   button {
+//     float: right;
+//     font-size: 24px;
+//     width: 42px;
+//     height: 42px;
+//     // border: none;
+//     padding: 0;
+//     margin: 0;
+//   }
+//   button:before {
+//     content: "\00D7" ;
+//   }
+//   button:hover:before {
+//     content:"+";
+//   }
+//   display: block;
+//   height: 36px;
+//   box-sizing: border-box;
+// }
+
+
+
+  //////////
+
   .hamburger-dropdown ul {
     position: absolute;
     top: 50px;
