--- a/app/assets/stylesheets/modal.scss
+++ b/app/assets/stylesheets/modal.scss
@@ -77,12 +77,12 @@
   button {
     float: right;
     font-size: 38px;
-    width: 36px;
-    height: 42px;
+    width: 38px;
+    height: 38px;
     border: none;
     padding: 0;
     margin-left: 0;
-    margin-right: 10px;
+    margin-right: 0;
     margin-top: 0;
     margin-bottom: 0;
   }
