--- a/app/assets/stylesheets/modal.scss
+++ b/app/assets/stylesheets/modal.scss
@@ -77,19 +77,23 @@
   button {
     float: right;
     font-size: 38px;
-    width: 38px;
-    height: 38px;
+    width: 42px;
+    height: 42px;
     border: none;
     padding: 0;
     margin-left: 0;
     margin-right: 0;
-    margin-top: 0;
+    margin-top: 0px;
     margin-bottom: 0;
   }
   button:before {
+    padding-left: 10px;
+    padding-right: 10px;
     content: "\00D7";
   }
   button:hover:before {
+    padding-left: 10px;
+    padding-right: 10px;
     content:"+";
   }
   display: block;
