--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -374,6 +374,8 @@
       display: flex;
       justify-content: center;
       padding: 10px;
+      flex-wrap: wrap;
+      text-align: center;
     }
 
     ul {
