--- a/app/assets/stylesheets/product_show.scss
+++ b/app/assets/stylesheets/product_show.scss
@@ -621,6 +621,10 @@
 }
 
 @media all and (max-width: 640px) {
+  .product-show-page {
+    padding-top: 10px;
+    margin-top: 85px;
+  }
   .the-story,
   .the-maker,
   .product-details-shipping {
