--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -312,6 +312,10 @@
       justify-content: space-between;
       padding: 0;
     }
+    .feature-nav {
+      position: fixed;
+      z-index: 3;
+    }
     display: flex;
     justify-content: space-between;
     padding-left: 10px;
@@ -321,6 +325,14 @@
     flex-direction: row-reverse;
     align-items: center;
     margin-top: 20px;
+
+    position: fixed;
+    top: 0;
+    width: 100%;
+    box-sizing: border-box;
+    z-index: 3;
+    background-color: $white;
+    border-bottom: 1px solid $beige;
   }
 
   .title-nav-empty-cart-icon {
