--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -161,6 +161,7 @@
   .background-products {
     background-color: $beige;
     padding-top: 10px;
+    margin-top: 90px;
   }
 
   .links-nav hr, .links-nav div:not(:first-of-type) {
