--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,8 +25,13 @@
     <% end %>
 
     <script type="text/javascript">
+      window.earthURL = "<%= image_url('earth.mp4') %>"
       window.emptyCartURL = "<%= image_url('empty-cart.svg') %>"
-      window.backgroundImgURL = "<%= image_url('background.jpg') %>"
+      window.firstBackgroundImgURL = "<%= image_url('background.jpg') %>"
+      window.secondBackgroundImgURL = "<%= image_url('background2.jpg') %>"
+      window.firstCatImgURL = "<%= image_url('firstCat.jpg') %>"
+      window.secondCatImgURL = "<%= image_url('secondCat.jpg') %>"
+      window.thirdCatImgURL = "<%= image_url('thirdCat.jpg') %>"
       window.giftBannerURL = "<%= image_url('banners/gifts_banner.jpg') %>"
       window.funBannerURL = "<%= image_url('banners/fun_banner.jpg') %>"
       window.homeBannerURL = "<%= image_url('banners/home_banner.jpg') %>"
